some adjustments for better sizing at various widths; fixed overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,15 @@
     box-sizing: border-box;
 }
 
-html, body, #root {
+html {
     height: 100%;
+    background: #181D24;
+}
+
+body {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 body {
@@ -22,8 +29,12 @@ body {
     font-size: 16px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: linear-gradient(to bottom left, var(--color-background-light), var(--color-background-dark));
     color: var(--color-foreground-primary);
+    background: linear-gradient(to bottom left, var(--color-background-light), var(--color-background-dark)) no-repeat;
+}
+
+#root {
+    flex: 1;
 }
 
 code {
@@ -48,3 +59,7 @@ ul {
     padding: 0;
     margin: 0;
 }
+
+*::-webkit-scrollbar-track { border-radius: 10px; background-color: rgba(0, 0, 0, 0.2); }
+*::-webkit-scrollbar { width: 8px; height: 8px; background: none; }
+*::-webkit-scrollbar-thumb { border-radius: 10px; background-color: #555; }
